added CEP feature project and Maven information
Change-Id: I8f789c12eee5aaea2bd48498fac40e8e0cb25e64
Signed-off-by: Istvan David <davidi@inf.mit.bme.hu>

--- a/releng/org.eclipse.viatra2.emf.parent/pom.xml
+++ b/releng/org.eclipse.viatra2.emf.parent/pom.xml
@@ -176,18 +176,22 @@
 				</property>
 			</activation>
 			<modules>
+				<module>../../plugins/org.eclipse.viatra.cep.core</module>
+				<module>../../plugins/org.eclipse.viatra.cep.metamodels</module>
+				<module>../../plugins/org.eclipse.viatra.cep.vepl</module>
+				<module>../../plugins/org.eclipse.viatra.cep.vepl.ui</module>
 				<module>../../plugins/org.eclipse.viatra.dse.base</module>
-		    <module>../../plugins/org.eclipse.viatra.dse.api</module>
-		    <module>../../plugins/org.eclipse.viatra.dse.dependencygraph</module>
-		    <module>../../plugins/org.eclipse.viatra.dse.designspace</module>
-		    <module>../../plugins/org.eclipse.viatra.dse.designspace.pathfinding</module>
-		    <module>../../plugins/org.eclipse.viatra.dse.emfdesignspace.model</module>
-		    <module>../../plugins/org.eclipse.viatra.dse.emfdesignspace.patterns</module>
-		    <module>../../plugins/org.eclipse.viatra.dse.genetic</module>
-		    <module>../../plugins/org.eclipse.viatra.dse.monitor</module>
-			
+				<module>../../plugins/org.eclipse.viatra.dse.api</module>
+				<module>../../plugins/org.eclipse.viatra.dse.dependencygraph</module>
+				<module>../../plugins/org.eclipse.viatra.dse.designspace</module>
+				<module>../../plugins/org.eclipse.viatra.dse.designspace.pathfinding</module>
+				<module>../../plugins/org.eclipse.viatra.dse.emfdesignspace.model</module>
+				<module>../../plugins/org.eclipse.viatra.dse.emfdesignspace.patterns</module>
+				<module>../../plugins/org.eclipse.viatra.dse.genetic</module>
+				<module>../../plugins/org.eclipse.viatra.dse.monitor</module>
 				<module>../../features/org.eclipse.viatra2.emf.runtime.feature</module>
-        <module>../../features/org.eclipse.viatra.dse.feature</module>
+				<module>../../features/org.eclipse.viatra.cep.feature</module>
+				<module>../../features/org.eclipse.viatra.dse.feature</module>
 				<module>../../releng/org.eclipse.viatra2.emf.update</module>
 			</modules>
 		</profile>
