--- a/plugins/org.eclipse.viatra.cep.core/pom.xml
+++ b/plugins/org.eclipse.viatra.cep.core/pom.xml
@@ -10,4 +10,75 @@
   </parent>
   <artifactId>org.eclipse.viatra.cep.core</artifactId>
   <packaging>eclipse-plugin</packaging>
+	
+	<build>
+		<resources>
+			<resource>
+				<directory>src</directory>
+			</resource>
+			<resource>
+				<directory>src-gen</directory>
+			</resource>
+			<resource>
+				<directory>xtend-gen</directory>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.incquery</groupId>
+				<artifactId>incquery-maven-plugin</artifactId>
+				<version>${incquery.compiler.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<outputDirectory>src-gen</outputDirectory>
+					<metamodels>
+						<metamodel>
+							<packageClass>org.eclipse.viatra.dse.emf.designspace.EMFDesignSpacePackage</packageClass>
+							<genmodelUri>../org.eclipse.viatra.dse.emfdesignspace.model/model/emfdesignspace.genmodel</genmodelUri>
+						</metamodel>
+					</metamodels>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.eclipse.viatra2</groupId>
+						<artifactId>org.eclipse.viatra.dse.emfdesignspace.model</artifactId>
+						<version>${project.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>xtend-gen</directory>
+							<excludes>
+								<exclude>keep.txt</exclude>
+								<exclude>.keep.txt</exclude>
+							</excludes>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.xtend</groupId>
+				<artifactId>xtend-maven-plugin</artifactId>
+				<version>${xtend.compiler.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
