--- a/releng/org.eclipse.viatra2.emf.parent/pom.xml
+++ b/releng/org.eclipse.viatra2.emf.parent/pom.xml
@@ -215,6 +215,11 @@
       </snapshots>
       <url>https://repo.eclipse.org/content/repositories/emf-incquery-snapshots/</url>
     </pluginRepository>
+	<pluginRepository>
+		<id>fornax.plugin.repository</id>
+		<name>Fornax Plugin Repository</name>
+		<url>http://www.fornax-platform.org/m2/repository</url>
+	</pluginRepository>
   </pluginRepositories>
 	<repositories>
 		<repository>
@@ -233,6 +238,11 @@
 		<repository>
 			<id>incquery-releases</id>
 			<url>https://repo.eclipse.org/content/repositories/emf-incquery-releases/</url>
+		</repository>
+		<repository>
+			<id>fornax.repository</id>
+			<name>Fornax Repository</name>
+			<url>http://www.fornax-platform.org/m2/repository</url>
 		</repository>
 	</repositories>
 	<scm>
