--- a/releng/org.eclipse.viatra2.emf.parent/pom.xml
+++ b/releng/org.eclipse.viatra2.emf.parent/pom.xml
@@ -178,6 +178,7 @@
 			<modules>
 				<module>../../plugins/org.eclipse.viatra.cep.core</module>
 				<module>../../plugins/org.eclipse.viatra.cep.core.metamodels</module>
+				<module>../../plugins/org.eclipse.viatra.cep.tooling.ui</module>
 				<module>../../plugins/org.eclipse.viatra.cep.vepl</module>
 				<module>../../plugins/org.eclipse.viatra.cep.vepl.ui</module>
 				<module>../../plugins/org.eclipse.viatra.dse.base</module>
