Updated documentation for the @QueryExplorer#display parameter
Change-Id: Ib16dbacfc9e3d23a7bc5e75a64891567fa943e12

--- a/plugins/org.eclipse.incquery.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.ui/plugin.xml
@@ -617,7 +617,7 @@
             description="The annotation can be used to define the way to present the pattern and its match set in the Query Explorer. "
             name="QueryExplorer">
          <annotationparameter
-               description="Possible values: &amp;quot;true&amp;quot; to display and &amp;quot;false&amp;quot; to not display."
+               description="Deprecated. Use the parameter checked instead."
                mandatory="false"
                multiple="false"
                name="display"
