--- a/plugins/org.eclipse.incquery.runtime.rete.recipes/pom.xml
+++ b/plugins/org.eclipse.incquery.runtime.rete.recipes/pom.xml
@@ -109,6 +109,11 @@
 					</dependency>
 					<dependency>
 						<groupId>org.eclipse.core</groupId>
+						<artifactId>org.eclipse.core.runtime</artifactId>
+						<version>[3.7.0,)</version>
+					</dependency>
+					<dependency>
+						<groupId>org.eclipse.core</groupId>
 						<artifactId>org.eclipse.core.resources</artifactId>
 						<version>[3.7.0,)</version>
 					</dependency>
