--- a/plugins/org.eclipse.incquery.runtime.rete.recipes/pom.xml
+++ b/plugins/org.eclipse.incquery.runtime.rete.recipes/pom.xml
@@ -110,7 +110,7 @@
 					<dependency>
 						<groupId>org.eclipse.core</groupId>
 						<artifactId>org.eclipse.core.runtime</artifactId>
-						<version>[3.7.0,)</version>
+						<version>[3.7.0,3.8.0)</version>
 					</dependency>
 					<dependency>
 						<groupId>org.eclipse.core</groupId>
