--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -379,11 +379,8 @@
 			<id>examples</id>
 			<activation>
 				<property>
-					<name>!maven.runtime</name>
+					<name>incquery.examples</name>
 				</property>
-				<file>
-					<exists>../../../examples/README.markdown</exists>
-				</file>
 			</activation>
 			<modules>
 				<module>../../../examples/school/org.eclipse.incquery.tests.school.parent</module>
@@ -394,11 +391,8 @@
 			<id>examples-eclipse.org</id>
 			<activation>
 				<property>
-					<name>!maven.runtime</name>
+					<name>incquery.examples.eclipse</name>
 				</property>
-				<file>
-					<exists>../../../examples-eclipse.org/README.markdown</exists>
-				</file>
 			</activation>
 			<modules>
 				<module>../../../examples-eclipse.org/bpm/org.eclipse.incquery.examples.bpm.test.parent</module>
