--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -282,6 +282,7 @@
 				<module>../../tests/org.eclipse.incquery.testing.queries</module>
 				<module>../../tests/org.eclipse.incquery.testing.ui</module>
 				<module>../../features/org.eclipse.incquery.runtime.feature</module>
+				<module>../../features/org.eclipse.incquery.runtime.generic.feature</module>
 				<module>../../features/org.eclipse.incquery.runtime.localsearch.feature</module>
 				<module>../../features/org.eclipse.incquery.querybasedfeatures.runtime.feature</module>
 				<module>../../features/org.eclipse.incquery.querybasedfeatures.tooling.feature</module>
