--- a/plugins/org.eclipse.incquery.runtime.matchers/build.properties
+++ b/plugins/org.eclipse.incquery.runtime.matchers/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               build.properties
+               build.properties,\
+               about.html
