[447780] Updated codebase for Xcore 1.2.1 compatibility Scope provider updates for pattern references
Change-Id: I4c92f56df3e8fc40dee8319ca7e5586fd27bea77
Signed-off-by: Tamas Szabo <tamas.szabo@itemis.de>

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -310,9 +310,10 @@
 		<profile>
 			<id>xcore_integration</id>
 			<activation>
-				<property>
+				<!-- <property>
 					<name>xcore.integration</name>
-				</property>
+				</property>-->
+				<activeByDefault>true</activeByDefault>
 			</activation>
 			<modules>
 				<module>../../plugins/org.eclipse.incquery.xcore.model</module>
