--- a/plugins/org.eclipse.viatra.cep.core.metamodels/pom.xml
+++ b/plugins/org.eclipse.viatra.cep.core.metamodels/pom.xml
@@ -10,4 +10,52 @@
   </parent>
   <artifactId>org.eclipse.viatra.cep.core.metamodels</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-eclipserun-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<appArgLine>-application org.eclipse.ant.core.antRunner -buildfile generate-emf.xml</appArgLine>
+					<dependencies>
+						<!-- list of bundles that we need -->
+						<dependency>
+							<artifactId>org.eclipse.ant.core</artifactId>
+							<type>eclipse-plugin</type>
+						</dependency>
+						<dependency>
+							<artifactId>org.apache.ant</artifactId>
+							<type>eclipse-plugin</type>
+						</dependency>
+						<dependency>
+							<artifactId>org.eclipse.emf.ant</artifactId>
+							<type>eclipse-plugin</type>
+						</dependency>
+						<dependency>
+							<artifactId>org.eclipse.emf.importer.ecore</artifactId>
+							<type>eclipse-plugin</type>
+						</dependency>
+					</dependencies>
+					<repositories>
+						<repository>
+							<id>luna</id>
+							<layout>p2</layout>
+							<url>http://download.eclipse.org/releases/luna</url>
+						</repository>
+					</repositories>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>eclipse-run</goal>
+						</goals>
+						<phase>generate-sources</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+  
+  
 </project>
