Icons for the menus.
Change-Id: Ied5d327b8f4551ae7b90745ccf422717f0082f7a

--- a/plugins/org.eclipse.viatra.cep.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.viatra.cep.tooling.ui/plugin.xml
@@ -8,21 +8,23 @@
             name="VIATRA-CEP">
 		</category>
 		<wizard
-			category="org.eclipse.viatra.cep.tooling.ui.category"
-			class="org.eclipse.viatra.cep.tooling.ui.builder.VeplLanguageExecutableExtensionFactory:org.eclipse.viatra.cep.tooling.ui.wizards.NewProjectWizard"
-			id="org.eclipse.viatra.cep.tooling.ui.newproject"
-			name="New VIATRA-CEP Project"
-			preferredPerspectives="org.eclipse.pde.ui.PDEPerspective,org.eclipse.jdt.ui.JavaPerspective"
-			project="true">
+        category="org.eclipse.viatra.cep.tooling.ui.category"
+        class="org.eclipse.viatra.cep.tooling.ui.builder.VeplLanguageExecutableExtensionFactory:org.eclipse.viatra.cep.tooling.ui.wizards.NewProjectWizard"
+        icon="icons/cepproject.PNG"
+        id="org.eclipse.viatra.cep.tooling.ui.newproject"
+        name="New VIATRA-CEP Project"
+        preferredPerspectives="org.eclipse.pde.ui.PDEPerspective,org.eclipse.jdt.ui.JavaPerspective"
+        project="true">
 		</wizard>
 		<wizard
-			category="org.eclipse.viatra.cep.tooling.ui.category"
-			class="org.eclipse.viatra.cep.tooling.ui.builder.VeplLanguageExecutableExtensionFactory:org.eclipse.viatra.cep.tooling.ui.wizards.NewVeplFileWizard"
-			finalPerspective="org.eclipse.pde.ui.PDEPerspective"
-			id="org.eclipse.viatra.cep.tooling.ui.newveplfile"
-			name="New VEPL File"
-			preferredPerspectives="org.eclipse.pde.ui.PDEPerspective,org.eclipse.jdt.ui.JavaPerspective"
-			project="true">
+        category="org.eclipse.viatra.cep.tooling.ui.category"
+        class="org.eclipse.viatra.cep.tooling.ui.builder.VeplLanguageExecutableExtensionFactory:org.eclipse.viatra.cep.tooling.ui.wizards.NewVeplFileWizard"
+        finalPerspective="org.eclipse.pde.ui.PDEPerspective"
+        icon="icons/cep.jpg"
+        id="org.eclipse.viatra.cep.tooling.ui.newveplfile"
+        name="New VEPL File"
+        preferredPerspectives="org.eclipse.pde.ui.PDEPerspective,org.eclipse.jdt.ui.JavaPerspective"
+        project="true">
 		</wizard>
    </extension>
    <extension
