--- a/releng/org.eclipse.viatra2.emf.parent/pom.xml
+++ b/releng/org.eclipse.viatra2.emf.parent/pom.xml
@@ -11,7 +11,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>../../plugins/org.eclipse.viatra2.emf.runtime</module>
-		
+
 		<module>../../releng/org.eclipse.viatra2.emf.target</module>
 	</modules>
 	<properties>
@@ -27,7 +27,7 @@
 		<xtend.compiler.version>2.7.3</xtend.compiler.version>
 		<incquery.repository.url>http://download.eclipse.org/incquery/updates/integration</incquery.repository.url>
 		<incquery.compiler.version>0.9.0-SNAPSHOT</incquery.compiler.version>
-    <!-- Sonar -->
+		<!-- Sonar -->
 		<sonar.version>3.6</sonar.version>
 		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
@@ -209,20 +209,30 @@
 		</profile>
 	</profiles>
 	<pluginRepositories>
-    <pluginRepository>
-      <id>incquery-snapshots</id>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <url>https://repo.eclipse.org/content/repositories/emf-incquery-snapshots/</url>
-    </pluginRepository>
-	<pluginRepository>
-		<id>fornax.plugin.repository</id>
-		<name>Fornax Plugin Repository</name>
-		<url>http://www.fornax-platform.org/m2/repository</url>
-	</pluginRepository>
-  </pluginRepositories>
+		<pluginRepository>
+			<id>central</id>
+			<name>Maven Central</name>
+			<url>http://repo.maven.apache.org/maven2</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>incquery-snapshots</id>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<url>https://repo.eclipse.org/content/repositories/emf-incquery-snapshots/</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>fornax.plugin.repository</id>
+			<name>Fornax Plugin Repository</name>
+			<url>http://www.fornax-platform.org/m2/repository</url>
+		</pluginRepository>
+	</pluginRepositories>
 	<repositories>
+		<repository>
+			<id>central</id>
+			<name>Maven Central</name>
+			<url>http://repo.maven.apache.org/maven2</url>
+		</repository>
 		<repository>
 			<id>incquery.update</id>
 			<layout>p2</layout>
