Added CEP builder to the CEP nature.
Change-Id: I60f35ad8671114d5a11aff7d746099c21ead1b6d
Signed-off-by: Istvan David <davidi@inf.mit.bme.hu>

--- a/plugins/org.eclipse.viatra.cep.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.viatra.cep.tooling.ui/plugin.xml
@@ -35,6 +35,9 @@
                class="org.eclipse.viatra.cep.tooling.ui.nature.ViatraCepNature">
          </run>
       </runtime>
+      <builder
+            id="org.eclipse.viatra.cep.tooling.ui.projectbuilder">
+      </builder>
    </extension>
    <extension
          id="org.eclipse.viatra.cep.tooling.ui.projectbuilder"
