[441784] Prepared the plugins for the builder.
Change-Id: Ib20d38afdac082bd35981f1a1668523ab9d4309b
Signed-off-by: Istvan David <davidi@inf.mit.bme.hu>

--- a/plugins/org.eclipse.viatra.cep.vepl.ui/plugin.xml
+++ b/plugins/org.eclipse.viatra.cep.vepl.ui/plugin.xml
@@ -520,5 +520,11 @@
             extensions="vepl">
     </provider>
   </extension>
+  <extension
+         point="org.eclipse.xtext.builder.participant">
+      <participant
+            class="org.eclipse.viatra.cep.vepl.ui.VeplExecutableExtensionFactory:org.eclipse.xtext.builder.IXtextBuilderParticipant">
+      </participant>
+   </extension>
 
 </plugin>
