[458936] Added the DSL test plugin to the parent POM dependencies.
Change-Id: I0000000000000000000000000000000000000000
Signed-off-by: Istvan David <davidi@inf.mit.bme.hu>

--- a/releng/org.eclipse.viatra.emf.parent/pom.xml
+++ b/releng/org.eclipse.viatra.emf.parent/pom.xml
@@ -191,6 +191,7 @@
 				<module>../../plugins/org.eclipse.viatra.dse.emfdesignspace.patterns</module>
 				<module>../../plugins/org.eclipse.viatra.dse.genetic</module>
 				<module>../../plugins/org.eclipse.viatra.dse.monitor</module>
+				<module>../../tests/org.eclipse.viatra.cep.vepl.tests</module>
 				<module>../../features/org.eclipse.viatra.emf.runtime.feature</module>
 				<module>../../features/org.eclipse.viatra.cep.feature</module>
 				<module>../../features/org.eclipse.viatra.dse.feature</module>
