--- a/tests/org.eclipse.viatra.cep.vepl.tests/pom.xml
+++ b/tests/org.eclipse.viatra.cep.vepl.tests/pom.xml
@@ -57,7 +57,7 @@
 				<directory>src</directory>
 			</resource>
 			<resource>
-				<directory>src-gen</directory>
+				<directory>xtend-gen</directory>
 			</resource>
 		</resources>
 	</build>
