[458936] Modified pom in order to get the right test directory
Change-Id: I0000000000000000000000000000000000000000
Signed-off-by: Istvan David <davidi@inf.mit.bme.hu>

--- a/tests/org.eclipse.viatra.cep.vepl.tests/pom.xml
+++ b/tests/org.eclipse.viatra.cep.vepl.tests/pom.xml
@@ -41,6 +41,10 @@
 							<goal>compile</goal>
 							<goal>testCompile</goal>
 						</goals>
+						 <configuration>
+							<outputDirectory>${project.build.directory}/src</outputDirectory>
+							<testOutputDirectory>${project.build.directory}/xtend-gen/test</testOutputDirectory>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -52,13 +56,5 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<resources>
-			<resource>
-				<directory>src</directory>
-			</resource>
-			<resource>
-				<directory>xtend-gen</directory>
-			</resource>
-		</resources>
 	</build>
 </project>
