--- a/tests/org.eclipse.viatra.cep.vepl.tests/pom.xml
+++ b/tests/org.eclipse.viatra.cep.vepl.tests/pom.xml
@@ -41,18 +41,37 @@
 							<goal>compile</goal>
 							<goal>testCompile</goal>
 						</goals>
-						 <configuration>
-							<outputDirectory>${project.build.directory}/src</outputDirectory>
-							<testOutputDirectory>${project.build.directory}/xtend-gen/test</testOutputDirectory>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.9</version>
+					<inherited>true</inherited>
+					<executions>
+						<execution>
+							<id>test</id>
+							<phase>test</phase>
+							<configuration>
+								<excludes>
+									<exclude>**/Abstract*</exclude>
+								</excludes>
+								<forkMode>once</forkMode>
+								<reportFormat>xml</reportFormat>
+								<testClassesDirectory>target/classes</testClassesDirectory>
+							</configuration>
+							<goals>
+								<goal>test</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>${vmargs}</argLine>
+					<skip>true</skip>
 				</configuration>
 			</plugin>
 		</plugins>
