--- a/tests/org.eclipse.viatra.cep.vepl.tests/pom.xml
+++ b/tests/org.eclipse.viatra.cep.vepl.tests/pom.xml
@@ -44,34 +44,11 @@
 					</execution>
 				</executions>
 			</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.9</version>
-					<inherited>true</inherited>
-					<executions>
-						<execution>
-							<id>test</id>
-							<phase>test</phase>
-							<configuration>
-								<excludes>
-									<exclude>**/Abstract*</exclude>
-								</excludes>
-								<forkMode>once</forkMode>
-								<reportFormat>xml</reportFormat>
-								<testClassesDirectory>target/classes</testClassesDirectory>
-							</configuration>
-							<goals>
-								<goal>test</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<configuration>
-					<skip>true</skip>
+					<argLine>${vmargs}</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
