[458936] Updated naming conventions for tests.
Change-Id: I0000000000000000000000000000000000000000
Signed-off-by: Istvan David <davidi@inf.mit.bme.hu>

--- a/tests/org.eclipse.viatra.cep.vepl.tests/pom.xml
+++ b/tests/org.eclipse.viatra.cep.vepl.tests/pom.xml
@@ -49,6 +49,11 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<configuration>
 					<argLine>${vmargs}</argLine>
+					<includes>
+						<include>**/*Test.java</include>
+						<include>**/*Tests.java</include>
+						<include>**/*Suite.java</include>
+					</includes>
 				</configuration>
 			</plugin>
 		</plugins>
