--- a/features/org.eclipse.viatra.dse.feature/pom.xml
+++ b/features/org.eclipse.viatra.dse.feature/pom.xml
@@ -4,10 +4,10 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>org.eclipse.viatra.emf.parent</artifactId>
+		<artifactId>org.eclipse.viatra.parent</artifactId>
 		<groupId>org.eclipse.viatra</groupId>
 		<version>0.7.0-SNAPSHOT</version>
-		<relativePath>../../releng/org.eclipse.viatra.emf.parent/pom.xml</relativePath>
+		<relativePath>../../releng/org.eclipse.viatra.parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>org.eclipse.viatra.dse.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
