--- a/maven/viatra-emf-runtime/pom.xml
+++ b/maven/viatra-emf-runtime/pom.xml
@@ -2,9 +2,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.eclipse.viatra</groupId>
-    <artifactId>org.eclipse.viatra.emf.parent</artifactId>
+    <artifactId>org.eclipse.viatra.parent</artifactId>
     <version>0.7.0-SNAPSHOT</version>
-    <relativePath>../../releng/org.eclipse.viatra.emf.parent</relativePath>
+    <relativePath>../../releng/org.eclipse.viatra.parent</relativePath>
   </parent>
   <artifactId>viatra-emf-runtime</artifactId>
   <name>VIATRA EMF Support</name>
