--- a/plugins/org.eclipse.viatra.cep.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.viatra.cep.tooling.ui/plugin.xml
@@ -10,7 +10,7 @@
 		<wizard
         category="org.eclipse.viatra.cep.tooling.ui.category"
         class="org.eclipse.viatra.cep.tooling.ui.builder.VeplLanguageExecutableExtensionFactory:org.eclipse.viatra.cep.tooling.ui.wizards.NewProjectWizard"
-        icon="icons/new-project.PNG"
+        icon="icons/new-project.png"
         id="org.eclipse.viatra.cep.tooling.ui.newproject"
         name="New VIATRA-CEP Project"
         preferredPerspectives="org.eclipse.pde.ui.PDEPerspective,org.eclipse.jdt.ui.JavaPerspective"
@@ -26,18 +26,6 @@
         preferredPerspectives="org.eclipse.pde.ui.PDEPerspective,org.eclipse.jdt.ui.JavaPerspective"
         project="true">
 		</wizard>
-   </extension>
-   <extension
-         id="org.eclipse.viatra.cep.projectnature"
-         point="org.eclipse.core.resources.natures">
-      <runtime>
-         <run
-               class="org.eclipse.viatra.cep.tooling.ui.nature.ViatraCepNature">
-         </run>
-      </runtime>
-      <builder
-            id="org.eclipse.viatra.cep.tooling.ui.projectbuilder">
-      </builder>
    </extension>
    <extension
          id="org.eclipse.viatra.cep.tooling.ui.projectbuilder"
