--- a/plugins/org.eclipse.incquery.tooling.ui.retevis/build.properties
+++ b/plugins/org.eclipse.incquery.tooling.ui.retevis/build.properties
@@ -1,7 +1,8 @@
-source.. = src/
-output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
                about.html
+source.. = src/,\
+           src-gen/
+output.. = bin/
