[460028] extended query based feature annotation with useAsSurrogate parameter
  updated generator fragment to handle surrogate query attribute

--- a/plugins/org.eclipse.incquery.querybasedfeatures.runtime/plugin.xml
+++ b/plugins/org.eclipse.incquery.querybasedfeatures.runtime/plugin.xml
@@ -42,6 +42,13 @@
                name="generateIntoModelCode"
                type="boolean">
          </annotationparameter>
+         <annotationparameter
+               description="If true, the Ecore model is not modified and instead of replacing the derived feature, the defined query will be used as a pattern call in all patterns where the derived feature is used in the definition."
+               mandatory="false"
+               multiple="false"
+               name="useAsSurrogate"
+               type="boolean">
+         </annotationparameter>
       </annotation>
    </extension>
    <extension
