[438686] Viewers runtime rewritten
No data binding dependency
Notation and Traceability models added
Full rewrite of the internals, API mostly unchanged (only type
differences)

Change-Id: I49202a318f88bc72ee49f0947aa2bf16baa2b0c4
Signed-off-by: Csaba Debreceni <debreceni@mit.bme.hu>
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@mit.bme.hu>

--- a/plugins/org.eclipse.incquery.viewers.runtime/build.properties
+++ b/plugins/org.eclipse.incquery.viewers.runtime/build.properties
@@ -1,7 +1,10 @@
-source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               about.html
+               about.html,\
+               plugin.properties
+source.. = src/,\
+           src-gen/,\
+           emf-gen/
+output.. = bin/
