--- a/plugins/org.eclipse.incquery.viewers.runtime/pom.xml
+++ b/plugins/org.eclipse.incquery.viewers.runtime/pom.xml
@@ -11,4 +11,95 @@
 	</parent>
 	<artifactId>org.eclipse.incquery.viewers.runtime</artifactId>
 	<packaging>eclipse-plugin</packaging>
+	<properties>
+		<emf.workspace.location>${project.basedir}/../../target/workspace</emf.workspace.location>
+	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.5</version>
+				<executions>
+					<execution>
+						<phase>clean</phase>
+						<goals>
+							<goal>clean</goal>
+						</goals>
+						<configuration>
+							<filesets>
+								<fileset><!-- EMF generated code -->
+									<directory>emf-gen</directory>
+									<includes>
+										<include>**/*</include>
+									</includes>
+								</fileset>
+								<fileset><!--  EMF generator workspace -->
+									<directory>${emf.workspace.location}</directory>
+									<includes>
+										<include>**/*</include>
+									</includes>
+								</fileset>
+								<fileset><!--  IncQuery generated code -->
+									<directory>src-gen</directory>
+									<includes>
+										<include>**/*</include>
+									</includes>
+								</fileset>
+							</filesets>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-eclipserun-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<appArgLine>-data ${emf.workspace.location} -application org.eclipse.emf.codegen.ecore.Generator -projects ${project.basedir} -model ${project.basedir}/model/notation.genmodel ${project.basedir}</appArgLine>
+					<dependencies>
+						<dependency>
+							<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
+							<type>eclipse-plugin</type>
+						</dependency>
+					</dependencies>
+					<repositories>
+						<repository>
+							<id>indigo</id>
+							<layout>p2</layout>
+							<url>http://download.eclipse.org/releases/indigo</url>
+						</repository>
+					</repositories>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>eclipse-run</goal>
+						</goals>
+						<phase>generate-sources</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.incquery</groupId>
+				<artifactId>incquery-maven-plugin</artifactId>
+				<version>${project.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<outputDirectory>src-gen</outputDirectory>
+					<metamodels>
+						<metamodel>
+							<genmodelUri>model/notation.genmodel</genmodelUri>
+						</metamodel>
+					</metamodels>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
